--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-Hello
+<iframe src="./index.pdf" width="100%" height="600px">
+    This browser does not support PDFs. Please download the PDF to view it: <a href="./index.pdf">Download PDF</a>.
+</iframe>
