--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-<iframe src="./index.pdf" width="100%" height="600px">
-    This browser does not support PDFs. Please download the PDF to view it: <a href="./index.pdf">Download PDF</a>.
+<iframe src="./cv.pdf" width="100%" height="100%">
+    This browser does not support PDFs. Please download the PDF to view it: <a href="./cv.pdf">Download PDF</a>.
 </iframe>
+
+<embed src="./cv.pdf" width="100%" height="600px" type="application/pdf">
