--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<iframe src="./cv.pdf" width="100%" height="100%">
-    This browser does not support PDFs. Please download the PDF to view it: <a href="./cv.pdf">Download PDF</a>.
-</iframe>
-
-<embed src="./cv.pdf" width="100%" height="600px" type="application/pdf">
+<embed src="./cv.pdf" width="100%" height="100%" type="application/pdf">
